row gap value fix

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -3,7 +3,7 @@
     max-width: 1158px;
     padding: 0 24px;
     display: grid;
-    gap: 30px;
+    gap: 24px 30px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: 
     "daniel daniel jonathan kira"
